adicionando mais moedas

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <option value="Dolar">
                     US$ Dólar americano
                 <option value="Euro" class="currency-value-euro">€ Euro</option>
+                
+                <option class="currency-libra">libra</option>
+
+                <option class="currency-biticoin">biticoin</option>
+
                 </option>
 
             </select>
